[package]
name = "casperlabs-contracts"
version = "0.1.0"
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
build = "build.rs"

[lib]
path = "phony_lib.rs"

[build-dependencies]
fs_extra = "1.1.0"
toml = "0.5.3"

[workspace]
members = [
    "bench/*",
    "client/*",
    "explorer/*",
    "profiling/*",
    "SRE/*",
    "system/*",
    "test/*",
]

[features]
default = ["bench", "client", "explorer", "profiling", "SRE", "system", "test"]
bench = []
client = []
explorer = []
profiling = []
SRE = []
system = []
test = []
