[package]
name = "keys-manager"
version = "0.1.0"
authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "keys_manager"
path = "src/main.rs"
doctest = false
test = false
bench = false

[dependencies]
contract = { path = "../../../contract", package = "casperlabs-contract" }
serde = { version = "1", default-features = false, features = ["derive"] }
types = { path = "../../../types", package = "casperlabs-types" }
